--- a/src/UI/app/GoalPage/NewGoal.module.css
+++ b/src/UI/app/GoalPage/NewGoal.module.css
@@ -215,19 +215,7 @@ background-color: rgb(240, 240, 240)
 .blockSelect:hover .option{
     display: block;
 }
-.two {
-    display: flex;
-    flex-direction: row;
-    cursor: pointer;
-    margin-left: 2%;
-}
 
-.three {
-    display: flex;
-    flex-direction: row;
-    cursor: pointer;
-    margin-left: 2%;
-}
 .five {
     height: 60%;
     width: 200px;
@@ -238,28 +226,23 @@ background-color: rgb(240, 240, 240)
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin-right: 1%;
-    margin-left: 2%;
+
+
+    & select{
+        max-width: 300px;
+    }
+   
 }
+
 .four {
     height: 60%;
     width: 150px;
     display: flex;
     flex-direction: row;
-    box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.25);
-    display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
     margin-right: 1%;
-    margin-left: 2%;
-}
-
-.four span {
-    font-weight: 600;
-    font-family: 'Montserrat';
-    color: rgb(58, 58, 58);
-    font-size: 14px;
+    column-gap: 20px;
 }
 
 
@@ -277,27 +260,22 @@ background-color: rgb(240, 240, 240)
     row-gap: 1%;
 }
 
-.Teaxtaera {
-    min-width: 50%;
-    min-height: 10vw;
-    background-color: #FFFFFF;
-    padding: 1%;
-    padding: 1%;
-    resize: none;
-}
-
-textarea::placeholder {
-    color: #B4B4B4;
-    font-style: italic;
-    font-size: 12px;
-    font-family: 'Montserrat';
-    padding-top: 3%;
-    padding-left: 3%;
-}
+.editorContainer {
+    margin-top: 20px;
+    position: relative; /* Это позволит дочернему элементу быть позиционированным относительно этого контейнера */
+    margin-bottom: 16px; /* Расстояние между редакторами */
+  }
+  
+  .deleteIcon {
+    position: absolute; /* Позиционируем элемент абсолютно */
+    top: -25px; /* Расстояние от верхней части контейнера */
+    right: -30px; /* Расстояние от правой части контейнера */
+    cursor: pointer; /* Изменяем курсор при наведении на иконку */
+  }
 
 .add {
-    height: 7%;
-    width: 16vw;
+    height: 50px;
+    width: 350px;
     background-color: #ffff;
     border-radius: 10px;
     display: flex;
@@ -309,11 +287,40 @@ textarea::placeholder {
     box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.25);
     align-self: flex-start;
     margin-left: 25%;
+    cursor: pointer;
+    transition: all 0.5s ease;
 }
-
+.add:hover {
+    background-color: #B4B4B4;
+    color: #FFFF;
+}
+.nameButton {
+    font-size: 14px;
+    font-family: 'Montserrat';
+    color: #3A3A3A;
+    font-weight: 400;
+}
+.add:hover span {
+    font-size: 14px;
+    font-family: 'Montserrat';
+    font-weight: 400;
+    color: #FFFF;
+}
 .add div {
     color: #3A3A3A;
     font-size: 14px;
+    font-family: 'Montserrat';
+    font-weight: 400;
+}
+
+.add svg {
+    transition: fill 0.3s ease;
+    /* Добавляем анимацию для цвета SVG */
+}
+
+.add:hover svg path {
+    fill: #FFFFFF;
+    /* Меняем цвет SVG при наведении */
 }
 
 mark {
