--- a/src/UI/app/SpeedGoalPage/SpeedGoalContent.module.css
+++ b/src/UI/app/SpeedGoalPage/SpeedGoalContent.module.css
@@ -100,6 +100,8 @@ input[type="search"]::-webkit-input-placeholder {
     flex-direction: row;
     justify-content: end;
     align-items: center;
+    box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.25);
+    z-index: 2;
 }
 
 .one {
@@ -300,7 +302,7 @@ textarea::placeholder {
 
 .add {
     height: 50px;
-    width: 250px;
+    width: 350px;
     background-color: #ffff;
     border-radius: 10px;
     display: flex;
