--- a/src/index.css
+++ b/src/index.css
@@ -40,10 +40,13 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 /*--------------------*/
 ::-webkit-scrollbar{
     background-color:  #FFFFFF;
-    width: 8px;
-
-    }
+    width: 5px;
+	height: 5px;   
+}
 ::-webkit-scrollbar-thumb{
     background-color: #005475;
     border-radius: 10px;
-    }
+	width: 3px;
+	height: 3px; 
+}
+
