--- a/src/UI/app/PolicyPage/NewPolicy.module.css
+++ b/src/UI/app/PolicyPage/NewPolicy.module.css
@@ -93,7 +93,7 @@ input[type="search"]::-webkit-input-placeholder {
 
 .editText {
     padding: 0.1% 2%;
-    height: 30%;
+    height: 35%;
     width: 100%;
     background-color: #ffff;
     display: flex;
@@ -120,6 +120,36 @@ input[type="search"]::-webkit-input-placeholder {
 .three img:hover {
     background-color: rgb(240, 240, 240);
     border-radius: 20%;
+}
+
+.item {
+    margin-right: 10px;
+}
+.itemName span {
+    font-style: italic;
+    font-size: 12px;
+    font-family: 'Montserrat';
+    font-weight: 400;
+}
+.select {
+    position: relative;
+    font-family: 'Montserrat';
+    font-weight: 600;
+}
+
+.div {
+    position: relative;
+}
+
+.div:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: rgb(240, 240, 240);
+    z-index: 100;
 }
 
 .iconSavetmp:hover {
@@ -256,7 +286,7 @@ input[type="search"]::-webkit-input-placeholder {
 
 .five {
     height: 60%;
-    width: 10%;
+    width: 110px;
     display: flex;
     flex-direction: row;
     box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.25);
