--- a/src/UI/app/StatisticsPage/StatisticsNew.module.css
+++ b/src/UI/app/StatisticsPage/StatisticsNew.module.css
@@ -83,7 +83,8 @@ input[type="search"]::-webkit-input-placeholder {
 }
 
 .spanPomoshnik::after {
-    content: 'СТАТИСТИКА';
+    content: ' СОЗДАТЬ СТАТИСТИКУ';
+    white-space: nowrap;
     position: absolute;
     left: 0;
     bottom: -15px;
@@ -109,27 +110,6 @@ input[type="search"]::-webkit-input-placeholder {
     flex-direction: row;
     align-items: center;
     column-gap: 15px;
-}
-
-.iconAdd {
-    position: relative;
-}
-
-.iconAdd:hover::after {
-    content: "Создать";
-    white-space: nowrap;
-    position: absolute;
-    width: 80px;
-    height: 20px;
-    bottom: -120%;
-    left: -120%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #3A3A3A;
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.5);
 }
 
 .iconSave {
