--- a/src/UI/app/PolicyPage/PolicyContent.module.css
+++ b/src/UI/app/PolicyPage/PolicyContent.module.css
@@ -352,12 +352,12 @@ input[type="search"]::-webkit-input-placeholder {
 .policySearch {
     position: absolute;
     top: calc(100% + 5px);
-    left:20px;
+    left: 20px;
     /* max-height: 100px; */
     height: auto;
     min-width: 200px;
     padding: 5px 5px;
-    background-color: rgb(255, 255, 255); 
+    background-color: rgb(255, 255, 255);
     /* overflow: visible;  */
     box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.25);
     border-radius: 4px;
@@ -492,6 +492,7 @@ textarea::placeholder {
     list-style: none;
     z-index: 100;
     padding-left: 20px;
+
     & li {
         padding: 5px;
         cursor: pointer;
@@ -643,12 +644,14 @@ textarea::placeholder {
 .item {
     margin-right: 10px;
 }
+
 .itemName span {
     font-style: italic;
     font-size: 12px;
     font-family: 'Montserrat';
     font-weight: 400;
 }
+
 .div {
     position: relative;
 }
@@ -663,16 +666,81 @@ textarea::placeholder {
     background-color: rgb(240, 240, 240);
     z-index: 100;
 }
-.modalTableRow{
+
+.modalTableRow {
     padding: 5px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
 }
-.modalTableRowIcon{
+
+.modalTableRowIcon {
     display: flex;
     flex-direction: row;
     align-items: center;
     column-gap: 10px;
+}
+
+.modalDelete {
+    position: fixed;
+    z-index: 2000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.modalDeleteElement {
+    position: relative;
+    height: 100px;
+    width: 250px;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 20px;
+}
+
+.row2 {
+    display: flex;
+    flex-direction: row;
+    column-gap: 5px;
+    margin-left: auto;
+    margin-right: 5px;
+}
+
+.btnYes {
+    height: 25px;
+    width: 40px;
+    border-radius: 10px;
+    background-color: green;
+    transition: background-color 0.3s ;
+    &:hover{
+        background-color: rgb(7, 107, 7);
+    }
+}
+
+.btnNo {
+    height: 25px;
+    width: 40px;
+    border-radius: 10px;
+    background-color: red;
+    transition: background-color 0.3s ;
+    &:hover{
+        background-color: rgb(185, 6, 6);
+    }
+}
+
+.text{
+    font-weight: 400;
+    font-family: 'Montserrat';
+    color: rgb(58, 58, 58);
+    font-size: 12px;
 }
