--- a/src/UI/app/GoalPage/GoalContent.module.css
+++ b/src/UI/app/GoalPage/GoalContent.module.css
@@ -7,21 +7,21 @@
     box-shadow: 0px 0px 3px 0 rgba(0, 0, 0, 0.5);
 }
 
-.header {
+/* .header {
     height: 16%;
     display: flex;
     flex-direction: column;
     box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.25);
     z-index: 2;
-}
+} */
 
-.fon {
+/* .fon {
     height: 25%;
     background-color: #005475;
     border-radius: 0px 8px 0px 0px;
-}
+} */
 
-.pomoshnikSearch {
+/* .pomoshnikSearch {
     height: 45%;
     display: flex;
     flex-direction: row;
@@ -29,7 +29,7 @@
     align-items: center;
     padding-left: 2%;
     padding-right: 2%;
-}
+} */
 
 .pomoshnik {
     display: flex;
@@ -90,7 +90,7 @@ input[type="search"]::-webkit-input-placeholder {
     font-size: 12px;
 }
 
-.editText {
+/* .editText {
     padding: 0.1% 2%;
     height: 30%;
     width: 100%;
@@ -100,7 +100,7 @@ input[type="search"]::-webkit-input-placeholder {
     justify-content: space-between;
     align-items: center;
     column-gap: 2%;
-}
+} */
 
 .one {
     display: flex;
@@ -115,12 +115,8 @@ input[type="search"]::-webkit-input-placeholder {
     border-radius: 20%;
 }
 
-.select {
-    height: auto;
-    cursor: pointer;
-}
 
-.five{
+.five {
     display: flex;
     flex-direction: row;
     justify-content: end;
@@ -129,14 +125,16 @@ input[type="search"]::-webkit-input-placeholder {
     margin-left: 5%;
     margin-right: 20px !important;
 }
-.seven{
+
+.seven {
     height: 60%;
-    width:20%;
+    width: 20%;
     display: flex;
     box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.25);
     padding-left: 5px;
 }
-.sixth{
+
+.sixth {
     height: 60%;
     display: flex;
     flex-direction: row;
@@ -146,9 +144,11 @@ input[type="search"]::-webkit-input-placeholder {
     justify-content: center;
     align-items: center;
 }
-.iconAdd{
+
+.iconAdd {
     position: relative;
 }
+
 .iconAdd:hover::after {
     content: "Создать";
     white-space: nowrap;
@@ -166,9 +166,10 @@ input[type="search"]::-webkit-input-placeholder {
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.5);
 }
 
-.iconSave{
+.iconSave {
     position: relative;
 }
+
 .iconSave:hover::after {
     content: "Сохранить";
     white-space: nowrap;
@@ -186,9 +187,10 @@ input[type="search"]::-webkit-input-placeholder {
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.5);
 }
 
-.iconPrint{
+.iconPrint {
     position: relative;
 }
+
 .iconPrint:hover::after {
     content: "Печатать";
     white-space: nowrap;
@@ -205,6 +207,7 @@ input[type="search"]::-webkit-input-placeholder {
     border-radius: 10px;
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.5);
 }
+
 .image:hover {
     background-color: rgb(240, 240, 240);
     border-radius: 20%;
@@ -216,18 +219,19 @@ input[type="search"]::-webkit-input-placeholder {
     margin-right: 0.5%;
 }
 
-.select:hover {
-    background-color: rgb(240, 240, 240);
-    border-radius: 20%;
-}
 .blockSelect {
     position: relative;
+
+    & > img:hover {
+        background-color: rgb(240, 240, 240);
+        border-radius: 20%;
+    }
 }
 
-.option{
+.option {
     position: absolute;
     display: none;
-    white-space: nowrap; 
+    white-space: nowrap;
     right: 1%;
     background-color: #ffff;
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.5);
@@ -238,17 +242,20 @@ input[type="search"]::-webkit-input-placeholder {
 
 .option li:first-child {
     margin-top: 0px;
-  }
-.option li{
+}
+
+.option li {
     margin-top: 7px;
     position: relative;
     font-family: 'Montserrat';
     font-weight: 400;
     font-size: 12px;
 }
-.option li:hover{
-background-color: rgb(240, 240, 240)
+
+.option li:hover {
+    background-color: rgb(240, 240, 240)
 }
+
 .option li:before {
     content: '';
     position: absolute;
@@ -259,9 +266,10 @@ background-color: rgb(240, 240, 240)
     background-color: rgb(240, 240, 240);
 }
 
-.blockSelect:hover .option{
+.blockSelect:hover .option {
     display: block;
 }
+
 .two {
     display: flex;
     flex-direction: row;
@@ -287,10 +295,10 @@ background-color: rgb(240, 240, 240)
     justify-content: center;
     align-items: center;
 
-    & select{
+    & select {
         max-width: 300px;
     }
-   
+
 }
 
 
@@ -304,8 +312,7 @@ background-color: rgb(240, 240, 240)
 
 .main {
     position: relative;
-    height: 84%;
-    max-height: 80vh;
+    height: calc(100vh - 120px - 24px - 25px);
     overflow-y: auto;
     background-color: #F0F0F0;
     padding-top: 1%;
@@ -315,18 +322,26 @@ background-color: rgb(240, 240, 240)
     align-items: center;
     row-gap: 1%;
 }
+
 .editorContainer {
     margin-top: 20px;
-    position: relative; /* Это позволит дочернему элементу быть позиционированным относительно этого контейнера */
-    margin-bottom: 16px; /* Расстояние между редакторами */
-  }
-  
-  .deleteIcon {
-    position: absolute; /* Позиционируем элемент абсолютно */
-    top: -25px; /* Расстояние от верхней части контейнера */
-    right: -30px; /* Расстояние от правой части контейнера */
-    cursor: pointer; /* Изменяем курсор при наведении на иконку */
-  }
+    position: relative;
+    /* Это позволит дочернему элементу быть позиционированным относительно этого контейнера */
+    margin-bottom: 16px;
+    /* Расстояние между редакторами */
+}
+
+.deleteIcon {
+    position: absolute;
+    /* Позиционируем элемент абсолютно */
+    top: -25px;
+    /* Расстояние от верхней части контейнера */
+    right: -30px;
+    /* Расстояние от правой части контейнера */
+    cursor: pointer;
+    /* Изменяем курсор при наведении на иконку */
+}
+
 .add {
     height: 50px;
     width: 350px;
@@ -344,22 +359,26 @@ background-color: rgb(240, 240, 240)
     cursor: pointer;
     transition: all 0.5s ease;
 }
+
 .add:hover {
     background-color: #B4B4B4;
     color: #FFFF;
 }
+
 .nameButton {
     font-size: 14px;
     font-family: 'Montserrat';
     color: #3A3A3A;
     font-weight: 400;
 }
+
 .add:hover span {
     font-size: 14px;
     font-family: 'Montserrat';
     font-weight: 400;
     color: #FFFF;
 }
+
 .add div {
     color: #3A3A3A;
     font-size: 14px;
@@ -387,7 +406,8 @@ mark {
     padding: 2px 5px;
     border-radius: 3px;
 }
-.selectImage{
+
+.selectImage {
     margin-right: 5px;
 }
 
@@ -396,6 +416,7 @@ input[type="search"]:focus {
     color: #005475;
     border-bottom: 1px solid rgb(0, 84, 117);
 }
+
 input[type="search"]:focus::placeholder {
     position: absolute;
     font-style: normal;
@@ -403,7 +424,7 @@ input[type="search"]:focus::placeholder {
     top: -2px;
     left: 5%;
     color: #005475;
-    background-image:none;
+    background-image: none;
 }
 
 input[type="search"]::-webkit-search-cancel-button {
