--- a/src/UI/app/GoalPage/NewGoal.module.css
+++ b/src/UI/app/GoalPage/NewGoal.module.css
@@ -1,5 +1,6 @@
 .dialog {
     width: 75%;
+    height: 100%;
     border-radius: 0px 8px 8px 0px;
     display: flex;
     flex-direction: column;
@@ -7,7 +8,7 @@
     box-shadow: 0px 0px 3px 0 rgba(0, 0, 0, 0.5);
 }
 
-.header {
+/* .header {
     height: 16%;
     display: flex;
     flex-direction: column;
@@ -29,7 +30,7 @@
     align-items: center;
     padding-left: 2%;
     padding-right: 2%;
-}
+} */
 
 .pomoshnik {
     display: flex;
@@ -91,7 +92,7 @@ input[type="search"]::-webkit-input-placeholder {
     font-size: 12px;
 }
 
-.editText {
+/* .editText {
     padding: 0.1% 2%;
     height: 30%;
     width: 100%;
@@ -100,7 +101,7 @@ input[type="search"]::-webkit-input-placeholder {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-}
+} */
 
 .one {
     display: flex;
@@ -115,10 +116,6 @@ input[type="search"]::-webkit-input-placeholder {
     border-radius: 20%;
 }
 
-.select {
-    height: auto;
-    cursor: pointer;
-}
 
 .image:hover {
     background-color: rgb(240, 240, 240);
@@ -169,12 +166,13 @@ input[type="search"]::-webkit-input-placeholder {
     border-radius: 10px;
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.5);
 }
-.select:hover {
-    background-color: rgb(240, 240, 240);
-    border-radius: 20%;
-}
 .blockSelect {
     position: relative;
+
+    & > img:hover {
+        background-color: rgb(240, 240, 240);
+        border-radius: 20%;
+    }
 }
 
 .option{
@@ -248,8 +246,7 @@ background-color: rgb(240, 240, 240)
 
 .main {
     position: relative;
-    height: 84%;
-    max-height: 80vh;
+    height: calc(100vh - 120px - 24px - 25px);
     overflow-y: auto;
     background-color: #F0F0F0;
     padding-top: 1%;
