--- a/src/UI/app/MessagesPage/content/Contact.module.css
+++ b/src/UI/app/MessagesPage/content/Contact.module.css
@@ -9,7 +9,7 @@
 
 .header {
     border-radius: 8px 0px 0px 0px;
-    height: 4%;
+    height: 32px;
     background-color: #005475;
     display: flex;
     flex-direction: row;
