--- a/src/UI/app/PostPage/PostContent.module.css
+++ b/src/UI/app/PostPage/PostContent.module.css
@@ -9,6 +9,7 @@
 
 .header {
     max-width: 100%;
+    height: 170px;
     display: flex;
     flex-direction: column;
     box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.25);
@@ -22,7 +23,7 @@
 }
 
 .pomoshnikSearch {
-    height: 41%;
+    height: 50px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -92,6 +93,7 @@ input[type="search"]::-webkit-input-placeholder {
 
 .editText {
     padding: 0.1% 2%;
+    min-height: 50px;
     max-width: 100%;
     background-color: #ffff;
     display: flex;
@@ -113,7 +115,9 @@ input[type="search"]::-webkit-input-placeholder {
 .select {
     position: relative;
     font-family: 'Montserrat';
-    font-weight: 600;
+    & option{
+        font-family: 'Montserrat';
+    }
 }
 
 .div {
@@ -193,6 +197,7 @@ input[type="search"]::-webkit-input-placeholder {
 
 .main {
     position: relative;
+    height: calc(100vh - 170px - 24px - 25px);
     flex-grow: 1;
     flex-shrink: 1;
     overflow-y: auto;
