--- a/src/UI/app/SpeedGoalPage/SpeedGoalContent.module.css
+++ b/src/UI/app/SpeedGoalPage/SpeedGoalContent.module.css
@@ -8,19 +8,19 @@
 }
 
 .header {
-    height: 22%;
+    height: 160px;
     display: flex;
     flex-direction: column;
 }
 
 .fon {
-    height: 20%;
+    height: 32px;
     background-color: #005475;
     border-radius: 0px 8px 0px 0px;
 }
 
 .pomoshnikSearch {
-    height: 35%;
+    height: 48px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -93,7 +93,7 @@ input[type="search"]::-webkit-input-placeholder {
 
 .editText {
     padding: 0.1% 2%;
-    height: 20%;
+    height: 40px;
     width: 100%;
     background-color: #ffff;
     display: flex;
@@ -117,18 +117,13 @@ input[type="search"]::-webkit-input-placeholder {
     border-radius: 20%;
 }
 
-.select {
-    height: auto;
-    cursor: pointer;
-}
-
-.select:hover {
-    background-color: rgb(240, 240, 240);
-    border-radius: 20%;
-}
-
 .blockSelect {
     position: relative;
+    
+    & > img:hover {
+        background-color: rgb(240, 240, 240);
+        border-radius: 20%;
+    }
 }
 
 .option {
@@ -193,7 +188,7 @@ input[type="search"]::-webkit-input-placeholder {
 
 .date {
     height: 60%;
-    min-width: 30%;
+    min-width: 200px;
     display: flex;
     flex-direction: row;
     box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.25);
@@ -216,8 +211,7 @@ input[type="search"]::-webkit-input-placeholder {
 }
 .main {
     position: relative;
-    height: 78%;
-    max-height: 80vh;
+    height: calc(100vh - 160px - 24px - 25px);
     overflow-y: auto;
     background-color: #F0F0F0;
     padding-top: 1%;
@@ -350,24 +344,13 @@ textarea::placeholder {
     /* Меняем цвет SVG при наведении */
 }
 
-mark {
-    background-color: lightblue;
-    color: black;
-}
-
-.highlight {
-    background-color: yellow;
-    padding: 2px 5px;
-    border-radius: 3px;
-}
-
 .text {
     font-family: "Montserrat";
     font-size: 12px;
 }
 
 .selectHeader {
-    height: 25%;
+    height: 40px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
