--- a/src/UI/app/StrategPage/StrategContent.module.css
+++ b/src/UI/app/StrategPage/StrategContent.module.css
@@ -112,16 +112,6 @@ input[type="search"]::-webkit-input-placeholder {
     cursor: pointer;
 }
 
-.select {
-    height: auto;
-    cursor: pointer;
-}
-
-.select:hover {
-    background-color: rgb(240, 240, 240);
-    border-radius: 20%;
-}
-
 .blockSelect {
     position: relative;
 }
@@ -174,18 +164,6 @@ background-color: rgb(240, 240, 240)
     flex-direction: row;
     cursor: pointer;
     margin-left: 2%;
-}
-.select {
-    height: auto;
-    cursor: pointer;
-    position: relative;
-    font-family: 'Montserrat';
-    font-weight: 600;
-}
-
-.select:hover {
-    background-color: rgb(240, 240, 240);
-    border-radius: 20%;
 }
 .date {
     height: 60%;
@@ -255,10 +233,36 @@ background-color: rgb(240, 240, 240)
     cursor: pointer;
 }
 
+.itemName span {
+    font-style: italic;
+    font-size: 12px;
+    font-family: 'Montserrat';
+    font-weight: 400;
+}
+
+.select {
+    position: relative;
+    font-family: 'Montserrat';
+}
+
+.div {
+    position: relative;
+}
+
+.div:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: rgb(240, 240, 240);
+    z-index: 100;
+}
+
 .main {
     position:relative;
-    height: 84%;
-    max-height: 80vh;
+    height: calc(100vh - 120px - 24px - 25px);
     overflow-y: auto;
     background-color: #F0F0F0;
     padding-top: 1%;
