--- a/src/UI/Custom/HandlerMutation.module.css
+++ b/src/UI/Custom/HandlerMutation.module.css
@@ -1,17 +1,17 @@
 .load {
     position: absolute;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     top:25%;
-    row-gap: 15px;
+    column-gap: 15px;
     z-index: 10000;
 }
 
 .loadImage {
     width: 33px;
     height: 33px;
-    animation: rotate 1s linear infinite;
+    animation: rotate 1.2s linear infinite;
     /* Анимация вращения */
 }
 
@@ -27,7 +27,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    top:25%;
+    top: 25%;
     row-gap: 15px;
     z-index: 10000;
 }
@@ -52,7 +52,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    top:25%;
+    top: 25%;
     row-gap: 15px;
     z-index: 10000;
 }
@@ -93,5 +93,30 @@
     100% {
         transform: scale(1);
         /* Возвращение к исходному размеру */
+    }
+}
+
+.wave {
+    -webkit-box-reflect: below 0 linear-gradient(transparent, rgba(0, 84, 117, 0.5));
+}
+
+.wave span {
+    display: inline-block;
+    font-weight: 600;
+    font-family: 'Montserrat';
+    color: #005475;
+    font-size: 14px;
+    animation: wave 1s infinite calc(0.1s * var(--i));
+}
+
+@keyframes wave {
+    0%,
+    40%,
+    100% {
+        transform: translateY(0);
+    }
+
+    20% {
+        transform: translateY(-10px)
     }
 }
