--- a/src/UI/app/StatisticsPage/StatisticsNew.module.css
+++ b/src/UI/app/StatisticsPage/StatisticsNew.module.css
@@ -147,6 +147,7 @@ input[type="search"]::-webkit-input-placeholder {
 .main {
     position: relative;
     height: calc(100vh - 120px - 24px - 25px);
+    width: 100%;
     max-height: 80vh;
     background-color: #ffff;
     padding-top: 1%;
@@ -165,6 +166,7 @@ input[type="search"]::-webkit-input-placeholder {
     align-items: center;
 
 }
+
 .block2{
     display: flex;
     width: 99%;
