--- a/src/UI/app/StatisticsPage/StatisticsContent.module.css
+++ b/src/UI/app/StatisticsPage/StatisticsContent.module.css
@@ -298,19 +298,19 @@ input[type="search"]::-webkit-input-placeholder {
     }
 }
 
-.textGrey{
+.textGrey {
     font-family: "Montserrat";
     font-size: 13px;
-    color:grey;
+    color: grey;
     text-align: center;
     margin-top: 2px;
 }
 
 input[type="date"] {
     position: relative;
-  }
-  
-  input[type="date"]::-webkit-calendar-picker-indicator {
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
     position: absolute;
     top: 0;
     left: 0;
@@ -320,9 +320,126 @@ input[type="date"] {
     height: auto;
     color: transparent;
     background: transparent;
-  }
-  
- 
-  
-  
-  
+}
+
+.modal {
+    position: fixed;
+    z-index: 2000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.modalTable {
+    position: relative;
+    left: 10%;
+    min-height:300px;
+    width: 410px;
+    background-color: #fff;
+    border-radius: 10px;
+    border-collapse: collapse;
+    display: block;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.6);
+    padding: 5px;
+}
+
+.exitImage {
+    position: absolute;
+    float: right;
+    top: -27px;
+    right: -27px;
+    cursor: pointer;
+}
+
+.modalTable thead,
+.modalTable tbody {
+    display: block;
+    /* Чтобы задать высоту для tbody */
+    width: 400px;
+}
+
+.modalTable tbody {
+    width: 400px;
+    max-height: 65vh;
+    /* Ограничиваем высоту для появления скролла */
+    overflow-y: auto;
+    /* Включаем скролл */
+}
+
+.modalTable th {
+    width: 200px;
+    padding: 10px;
+    border: 4px solid #005475;
+    border-bottom: 2px solid #005475;
+    font-family: "Montserrat";
+    white-space: nowrap;
+    /* Чтобы содержимое не переносилось */
+    vertical-align: top;
+    /* Выравнивание содержимого по верхнему краю */
+}
+
+.modalTable td {
+    width: 200px;
+    border: 3px solid #005475;
+    border-top: 1px solid #005475;
+    white-space: nowrap;
+    /* Чтобы содержимое не переносилось */
+    vertical-align: top;
+    /* Выравнивание содержимого по верхнему краю */
+    background-color: #ffff;
+}
+
+.modalTable thead th {
+    color: #005475;
+    background-color: #DDEBF1;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    /* Чтобы шапка оставалась видимой при скролле */
+}
+
+.row {
+    height: 25px;
+    padding: 5px;
+    display: flex;
+    column-gap: 5px;
+    border: 1px solid #005475;
+}
+
+.iconSaveModal {
+    position: relative;
+    display: flex;
+    flex-direction: row-reverse;
+    margin: 10px;
+}
+
+.iconSaveModal:hover::after {
+    content: "Сохранить";
+    white-space: nowrap;
+    position: absolute;
+    width: 80px;
+    height: 20px;
+    top: 35px;
+    right: -20px;
+    z-index: 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #3A3A3A;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.5);
+}
+
+.itemHover {
+    cursor: pointer;
+}
+.active{
+    border: solid 5px #005475 !important;
+}
