--- a/src/UI/app/GoalPage/NewGoal.module.css
+++ b/src/UI/app/GoalPage/NewGoal.module.css
@@ -357,3 +357,6 @@ input[type="search"]::-webkit-search-cancel-button {
     background-image: url('../../image/iconСlose.svg');
     background-position: center;
 }
+.select{
+    font-family: 'Montserrat';
+}
