--- a/src/UI/app/PolicyPage/PolicyContent.module.css
+++ b/src/UI/app/PolicyPage/PolicyContent.module.css
@@ -562,15 +562,18 @@ textarea::placeholder {
     align-items: center;
 }
 
-.modalTable {
+.modalWindow{
     position: relative;
-    max-height: 80vh;
+    height: 80vh;
     max-width: 50vw;
     background-color: #fff;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.6);
+    border-radius: 10px;
+    padding: 10px;
+}
+.modalTable {
     border-collapse: collapse;
-    /* Для устранения внешних отступов */
     display: block;
-    /* Обязательно */
 }
 
 .exitImage {
@@ -584,31 +587,31 @@ textarea::placeholder {
 .modalTable thead,
 .modalTable tbody {
     display: block;
-    /* Чтобы задать высоту для tbody */
-    width: 50vw;
+    width: calc(50vw - 20px);
 }
 
 .modalTable tbody {
     max-width: 50vw;
-    max-height: 65vh;
+    height: 65vh;
     /* Ограничиваем высоту для появления скролла */
     overflow-y: auto;
     /* Включаем скролл */
 }
 
 .modalTable th {
-    width: 25vw;
+    width: calc(25vw - 13.5px);
     padding: 10px;
-    border: 1px solid #ddd;
+    border: 3px solid #005475;
+    border-bottom: 1px solid #005475;
     white-space: nowrap;
-    /* Чтобы содержимое не переносилось */
     vertical-align: top;
-    /* Выравнивание содержимого по верхнему краю */
 }
 
 .modalTable td {
+    font-family: 'Montserrat';
     width: 25vw;
-    border: 1px solid #ddd;
+    border: 2px solid #005475;
+    border-top: 1px solid #005475;
     white-space: nowrap;
     /* Чтобы содержимое не переносилось */
     vertical-align: top;
@@ -616,7 +619,9 @@ textarea::placeholder {
 }
 
 .modalTable thead th {
-    background-color: #f2f2f2;
+    color: #005475;
+    font-family: 'Montserrat';
+    background-color: #DDEBF1;
     position: sticky;
     top: 0;
     z-index: 1;
@@ -627,7 +632,7 @@ textarea::placeholder {
     padding: 5px;
     display: flex;
     column-gap: 5px;
-    border: 1px solid #ddd;
+    border: 1px solid #005475;
 }
 
 .newBlock {
@@ -699,7 +704,11 @@ textarea::placeholder {
     justify-content: center;
     align-items: center;
     row-gap: 20px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.6);
+    border-radius: 10px;
+    padding: 10px;
 }
+
 
 .row2 {
     display: flex;
@@ -735,5 +744,37 @@ textarea::placeholder {
     font-weight: 400;
     font-family: 'Montserrat';
     color: rgb(58, 58, 58);
+    font-size: 14px;
+}
+.textMontserrat{
+    font-family: 'Montserrat';
     font-size: 12px;
 }
+.textMontserrat14{
+    font-family: 'Montserrat';
+}
+
+input[type="checkbox"] {
+    appearance: none;
+    width: 17px;
+    height: 17px;
+    border: 2px solid #005475;
+    border-radius: 4px;
+    background-color: white;
+    cursor: pointer;
+    position: relative;
+  }
+  
+  input[type="checkbox"]:checked {
+    background-color: #26a5d8;
+  }
+  
+  input[type="checkbox"]:checked::before {
+    content: "✓"; /* Галочка */
+    color: white;
+    font-size: 12px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
