--- a/src/UI/app/PostPage/PostNew.module.css
+++ b/src/UI/app/PostPage/PostNew.module.css
@@ -105,7 +105,7 @@ input[type="search"]::-webkit-input-placeholder {
 }
 
 .item{
-    width:175px;
+    max-width:175px;
     overflow: hidden;         
 }
 
