--- a/src/UI/app/StatisticsPage/StatisticsContent.module.css
+++ b/src/UI/app/StatisticsPage/StatisticsContent.module.css
@@ -477,3 +477,39 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .statisticsArrowLeft:hover{
     background-color: #26a5d8;
 }
+
+.item{
+    max-width: 200px;
+    overflow: hidden;
+}
+.itemName span {
+    font-style: italic;
+    font-size: 12px;
+    font-family: 'Montserrat';
+    font-weight: 400;
+}
+
+.select {
+    position: relative;
+    font-family: 'Montserrat';
+    max-width: 200px;
+    & option{
+        font-family: 'Montserrat';
+        max-width: 200px;
+    }
+}
+
+.div {
+    position: relative;
+}
+
+.div:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: rgb(240, 240, 240);
+    z-index: 100;
+}
